# productionalization-data-applications

./: .gitignore  Readme.md
containerization/model-server/: Dockerfile
containerization/simple_webapp/: Dockerfile  Readme.md  app.py
mlops/model-registry/: mlflow-exercise.ipynb  mlflow-training.ipynb  mlflow-tutorial.ipynb  requirements.txt
mlops/pipelines/: airflow-model-training.ipynb  metaflow-basics.ipynb  metaflow-model-training-SOLUTION.ipynb  metaflow-model-training-advanced.ipynb  metaflow-model-training.ipynb  metaflow-training.ipynb  pyproject.toml
mlops/pipelines/airflow-docker/: docker-compose.yaml
model-servers/: train-simple-model.py
model-servers/fast-api-server-SOLUTION/app/: app.py
model-servers/fast-api-server/app/: app.py
model-servers/fast-api-tutorial/app/: app.py
model-servers/mlserver/: requirements.txt
model-servers/mlserver/00-basic/: sklearn-basic-example.ipynb
model-servers/mlserver/01-custom/: custom-example.ipynb
